# terminal-agent

./: .gitignore  README.md  pyproject.toml
terminal_agent/: __main__.py  agent.py  dockerClient.py  tui.py  ui.py
